Implement game over screen and win condition. Added functionality to display game over message and final score. Updated tile colors based on adjacent mines

--- a/index.html
+++ b/index.html
@@ -15,12 +15,17 @@
         <div id="game-info">
             <p>Score <span id="score">0</span></p>
             <p>Time <span id="time">0</span></p>
-            <button id="reset">Try again</button>
+            <button class="reset-game">Reset</button>
         </div>
     </header>
 
     <main>
         <div id="game-board"></div>
+        <div id="game-over">
+            <h2 id="game-over-message"></h2>
+            <p id="final-score"></p>
+            <button class="reset-game">Try again</button>
+        </div>
     </main>
 </body>
 
