--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <h1>Minesweeper</h1>
         <div id="game-info">
-            <p>Score <span id="score">0</span></p>
+            <p id="score"></p>
             <button class="reset-game">Reset</button>
         </div>
         <div id="instructions">
